--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -18,8 +18,8 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   <div class="customer_mail">
-    <%= form.label :mail %>
-    <%= form.text_field :mail %>
+    <%= form.label :email %>
+    <%= form.text_field :email %>
   </div>
   <%= form.submit %>
 <% end %>
