--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,25 +1,2 @@
-<h2>コメント</h2>
-<% @customer.coments.each do |comnet| %>
-  <p>
-    <%= comment.commenter %>: <%= comment.body %>
-    <%= link_to '削除', [comment.post, comment],
-               :confirm => 'よろしいですか？',
-               :method => :delete %>
-
-  </p>
-<% end %>
-
-<h2>コメントを書く</h2>
-<%= form_for([@customer, @customer.comments.build]) do |f| %>
-  <div class="field">
-    <%= f.label :commenter %><br />
-    <%= f.text_field :commenter %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+予約完了しました。
+<%= link_to '詳細を確認する', reservation_path %>
