--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -1,7 +1,7 @@
 <h1>お問い合わせが完了しました！</h1>
 
-<h4>name: <%= @reservation.name %></h4>
+<h4>name: <%= @name %></h4>
 
 <h4>お問い合わせ内容の確認</h4>
 
-<p>content: <%= @reservation.content %></p>
+<p>content: <%= @content %></p>
