--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -23,4 +23,4 @@
   </div>
   <%= form.submit %>
 <% end %>
-<%= link_to "adminはこちら", reservations_path %>
+<%= link_to "adminはこちら", new_admin_session_path %>
