--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -21,6 +21,8 @@
     <%= form.label :email %>
     <%= form.text_field :email %>
   </div>
+  <%= form.hidden_field :customer_id, { value: current_customer.id } %>
+
   <%= form.submit %>
 <% end %>
 <%= link_to "adminはこちら", new_admin_session_path %>
