--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,4 +1,16 @@
-<h1>予約機能</h1>
-<p>予約サービスー</p>
-<%= link_to 'アドミン', new_admin_session_path %>
-<%= link_to 'カスタマー', new_customer_session_path %>
+<body>
+<div class="top">
+
+<div class="title">
+  <h1>予約機能</h1>
+</div>
+
+<div class="menu">
+<%= link_to '管理者はこちら', new_admin_session_path %>
+<br>
+<br>
+<%= link_to 'お客さんはこちら', new_customer_session_path %>
+</div>
+
+</div>
+</body>
