--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the tops controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.top { width: 960px; margin: 0 auto; font-size: 2.5em; }
+.menu { width: 960px; margin: 0 auto; }
+body {background-color: #FF0}
