--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -4,3 +4,14 @@
 .top { width: 960px; margin: 0 auto; font-size: 2.5em; }
 .menu { width: 960px; margin: 0 auto; }
 body {background-color: #FF0}
+
+.top{
+position: relative;
+padding: 0.2em 0.5em;
+background: -moz-linear-gradient(to right, rgb(255, 124, 111), #ffc994);
+background: -webkit-linear-gradient(to right, rgb(255, 124, 111), #ffc994);
+background: linear-gradient(to right, rgb(255, 124, 111), #ffc994);
+color: white;
+font-weight: lighter;
+box-shadow: 0 0 4px rgba(0, 0, 0, 0.56);
+}
