--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -2,15 +2,27 @@
 <div class="top">
 
 <div class="title">
-  <h1>予約機能</h1>
+<h1>予約サービス</h1>
 </div>
 
 <div class="menu">
-<%= link_to '管理者はこちら', new_admin_session_path %>
-<br>
-<br>
+<%= link_to '管理者はこちら', new_admin_session_path %>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
 <%= link_to 'お客さんはこちら', new_customer_session_path %>
 </div>
-
+<style type="text/css">
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+html {
+  display: table;
+}
+body {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
 </div>
 </body>
