--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the reservation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.end { width: 960px; margin: 0 auto; font-size: 2.5em; position: absolute; top: 0;}
+body {
+	position: absolute;
+}
+
+.page-header{ width: 960px; margin: 0 auto; font-size: 2.5em; position: absolute; top: 0;}
+.sample {margin-top: 70px;}
+.page-header{margin-top: 200px;}
+.tab1{margin-top: 10px;}
+.actions{margin-top: 20px; }
+.actions2{margin-top: 20px; padding: 20px 50px;}
+.remenber{margin-top: 20px; }
+.pass{margin-top: 20px; }
+.test{margin-bottom: 25px; }
+.customer_content{margin-top: 10px; }
+.customer_email{margin-top: 10px; }
+.customer_submit{margin-top: 10px; }
+.admin_s{margin-top: 10px; }
+.menu1{margin-top: 30px; }
+.menu2{margin-top: 60px; }
