--- a/app/views/customers/passwords/new.html.erb
+++ b/app/views/customers/passwords/new.html.erb
@@ -1,4 +1,7 @@
+
+<div class="pass">
 <h2>Forgot your password?</h2>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -14,3 +17,4 @@
 <% end %>
 
 <%= render "customers/shared/links" %>
+</div>
