--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,15 @@
     <title>Funappap</title>
     <%= csrf_meta_tags %>
 
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <header class="page-header">
     <%= link_to 'ログアウトします！（customer）', destroy_customer_session_path, method: :delete if current_customer %>
     <%= link_to 'ログアウトします！（admin）', destroy_admin_session_path, method: :delete if current_admin %>
     <%= yield %>
-  </body>
+  </header>
+
 </html>
