--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,4 +1,28 @@
+<div class="sample">
+  <%= image_tag("huna 2.gif") %>
+</div>
+
+<div class="end">
 <br>
-予約完了しました。
+<br><br>
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;予約完了しました。
 <br>
-<%= link_to '詳細を確認する', reservations_path %>
+</div>
+<style type="text/css">
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+html {
+  display: table;
+}
+body {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+</div>
+
+<br>
