--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,12 +1,15 @@
 <body>
 <div class="top">
 
+
 <div class="title">
 <h1>予約サービス</h1>
 </div>
 
-<div class="menu">
-<%= link_to '管理者はこちら', new_admin_session_path %>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+<div class="menu1">
+<%= link_to '管理者はこちら', new_admin_session_path %>&emsp;
+</div>
+<div class="menu2">
 <%= link_to 'お客さんはこちら', new_customer_session_path %>
 </div>
 <style type="text/css">
