--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -21,3 +21,9 @@ body {
 .admin_s{margin-top: 10px; }
 .menu1{margin-top: 30px; }
 .menu2{margin-top: 60px; }
+.textbox{padding-top: 30px; padding-bottom: 30px;
+  border: 4px double #000;
+      margin: 2em 0;
+      padding: 2em; }
+.btn btn-info1{margin-top: 10px; }
+.admin{margin-bottom: 200px; }
