--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -26,6 +26,5 @@
   <%= form.submit %>
   </div>
 <% end %>
-<div class="admin_s">
-<%= link_to "adminはこちら", new_admin_session_path %>
+<%= link_to "adminはこちら", new_admin_session_path,class: 'admin' %>
   </div>
