--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -26,5 +26,5 @@
   <%= form.submit %>
   </div>
 <% end %>
-<%= link_to "adminはこちら", new_admin_session_path,class: 'admin' %>
+<%= link_to "管理者はこちら", new_admin_session_path,class: 'admin' %>
   </div>
