--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,8 +1,6 @@
 <h1>予約一覧</h1>
-登録の順番通りになっています。
-<br>
-<br>
-メールを送信したら削除してください。
+<h1>登録の順番通りになっています。<h1>
+<h1>メールを送信したら削除してください。<h1>
 
 <% @reservations.each do |reservation| %>
 <tbody>
