--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -5,7 +5,7 @@
 <div class="end">
 <br>
 <br><br>
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;予約完了しました。
+&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;予約完了しました5分前になったらメールにお知らせします。
 <br>
 </div>
 <style type="text/css">
