--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -3,6 +3,11 @@
 
 <div class="title">
 <h1>予約サービス</h1>
+<h1>予約した人に5分前を知らせるアプリ</h1>
+<h1>使い方サインアップをします</h1>
+<h1>ログインをして予約を投稿します</h1>
+<h1>5分前になったら呼び出しメールを送信します。
+<h1></h1>
 </div>
 
 <div class="menu1">
