--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -5,7 +5,8 @@
 <div class="end">
 <br>
 <br><br>
-&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;予約完了しました5分前になったらメールにお知らせします。
+<br>
+<th>5分前になったらメールでお知らせします。<th>
 <br>
 </div>
 <style type="text/css">
