--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -10,12 +10,8 @@
 <h1></h1>
 </div>
 
-<div class="menu1">
-<%= link_to '管理者はこちら', new_admin_session_path %>&emsp;
-</div>
-<div class="menu2">
-<%= link_to 'お客さんはこちら', new_customer_session_path %>
-</div>
+<div class: "menu1"><%= link_to '管理者はこちら', new_admin_session_path  %>&emsp; </div><br>
+<div class: "menu2"><%= link_to 'お客さんはこちら', new_customer_session_path %> </div>
 <style type="text/css">
 html, body {
   width: 100%;
