--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -3,19 +3,18 @@
 <h1>メールを送信したら削除してください。<h1>
 
 <% @reservations.each do |reservation| %>
-<tbody>
-<table border="1">
+<table class="table table-bordered">
+    <thead>
     <tr>
-      <th class="textbox">名前:<%= reservation.name %></th>
+      <th class="textbox1">名前:<%= reservation.name %></th>
     </tr>
     <tr>
-      <th class="textbox">メールアドレス:<%= reservation.email %></th>
+      <th class="textbox4">メールアドレス:<%= reservation.email %></th>
     </tr>
     <tr>
-      <th class="textbox">内容:<%= reservation.content %></th>
+      <th class="textbox3">内容:<%= reservation.content %></th>
     </tr>
   <td class="textbox"><%= link_to 'メールを送信します', mail_reservations_path(reservation_id: reservation.id),class: 'btn btn btn-info' %><%= link_to '履歴を削除する',reservation_path(reservation.id), class: 'btn btn-info' , method: :delete %></td>
-
-</tbody>
+</thead>
 </table>
   <% end %>
