”提出します

--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -5,13 +5,14 @@
 .menu { width: 960px; margin: 0 auto; }
 body {background-color: #FF0}
 
-.top{
-position: relative;
-padding: 0.8em 0.5em;
-background: -moz-linear-gradient(to right, rgb(255, 124, 111), #ffc994);
-background: -webkit-linear-gradient(to right, rgb(255, 124, 111), #ffc994);
-background: linear-gradient(to right, rgb(255, 124, 111), #ffc994);
-color: white;
-font-weight: lighter;
-box-shadow: 0 0 4px rgba(0, 0, 0, 0.56);
-}
+// .top{
+// position: relative;
+// padding: 0.8em 0.5em;
+// background: -moz-linear-gradient(to right, rgb(255, 124, 111), #ffc994);
+// background: -webkit-linear-gradient(to right, rgb(255, 124, 111), #ffc994);
+// background: linear-gradient(to right, rgb(255, 124, 111), #ffc994);
+// color: white;
+// font-weight: lighter;
+// box-shadow: 0 0 4px rgba(0, 0, 0, 0.56);
+// margin-top: auto;
+// }
