--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the reservation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.end { width: 960px; margin: 0 auto; font-size: 1.0em; position: absolute; top: 0;}
+.end { width: 800px; margin: 0 auto; font-size: 1.0em; margin-top: auto;top: 0;}
 body {
 	position: absolute;
 }
@@ -38,3 +38,5 @@ body {
 .button, input{padding: 10px;}
 .menu1 {margin-top: 15px; font-size: 10px}
 .menu2 {margin-top: 15px; font-size: 30px}
+a.menu3 {margin-top: 15px; font-size: 80px}
+a.menu4 {margin-top: 15px; font-size: 80px}
