--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -33,6 +33,12 @@ body {
           padding: 2em;
           font-size: 0.5em;
         }
+        .textbox1{padding-top: 30px; padding-bottom: 30px;
+          border: 4px double #000;
+              margin: 2em 0;
+              padding: 2em;
+              font-size: 1em;
+            }
 .btn btn-info1{margin-top: 10px; }
 .admin{margin-bottom: 100px; }
 .button, input{padding: 10px;}
