--- a/app/views/customers/passwords/new.html.erb
+++ b/app/views/customers/passwords/new.html.erb
@@ -1,6 +1,6 @@
 
 <div class="pass">
-<h2>Forgot your password?</h2>
+<h2>パスワード再設定</h2>
 
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
@@ -12,7 +12,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "パスワードリセットします" %>
   </div>
 <% end %>
 
