--- a/app/views/customers/shared/_links.html.erb
+++ b/app/views/customers/shared/_links.html.erb
@@ -1,18 +1,18 @@
 <div class="test">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Log in", new_session_path(resource_name) %><br />
+    <%= link_to "ログイン", new_session_path(resource_name) %><br />
   <% end -%>
 </div>
 
 <div class="test">
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+    <%= link_to "サインアップ", new_registration_path(resource_name) %><br />
   <% end -%>
 </div>
 
 <div class="test">
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+    <%= link_to "パスワード忘れた方はこちら", new_password_path(resource_name) %><br />
   <% end -%>
 </div>
 
