--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,6 +1,6 @@
 <div class="test1">
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "ログイン", new_session_path(resource_name) %><br />
 <% end -%>
 </div>
 <!-- <div class="test">
@@ -9,7 +9,7 @@
 <% end -%> -->
 <div class="test">
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to  "Forgot your password?", new_password_path(resource_name)%><br />
+  <%= link_to  "パスワード忘れた方はこちら", new_password_path(resource_name)%><br />
 <% end -%>
 </div>
 <div class="test">
