--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <header class="page-header">
-    <%= link_to 'ログアウトします！（customer）', destroy_customer_session_path, method: :delete if current_customer %>
+    <%= link_to 'ログアウトします！', destroy_customer_session_path, method: :delete if current_customer %>
     <%= link_to 'ログアウトします！（admin）', destroy_admin_session_path, method: :delete if current_admin %>
     <%= yield %>
   </header>
