--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @reservation, local: true ) do |form| %>
+<%= form_with(model: @reservation,  url: reservation_path, local: true) do |form| %>
   <% if @reservation.errors.any? %>
     <div id="error_explanation">
       <h2><%= @reservation.errors.count %>件のエラーがあります。</h2>
@@ -21,7 +21,12 @@
     <%= form.label :email %>
     <%= form.text_field :email %>
   </div>
-  <%= form.hidden_field :customer_id, { value: current_customer.id } %>
+  <div class="customer_check">
+    <%= form.label :status %>
+    <label><%= form.radio_button :check, "true" %>未送信</label>
+    <label><%= form.radio_button :check, "false" %>送信済み</label>
+  </div>
+  <%#= form.hidden_field :customer_id, { value: current_customer.id } %>
 <div class="customer_submit">
   <%= form.submit %>
   </div>
