--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -46,3 +46,5 @@ body {
 .menu2 {margin-top: 15px; font-size: 30px}
 a.menu3 {margin-top: 15px; font-size: 80px}
 a.menu4 {margin-top: 15px; font-size: 80px}
+h1{font-size: 100px}
+.notice{font-size: 80px; color: #ff00ff}
