--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,7 +4,9 @@
 
 <div class="end">
 <br>
-<th>5分前になったらメールでお知らせします。<th>
+<p>予約完了しました</p>
+<th>5分前になったらメールを送信いたします。<th>
+<p>しばらくお待ちください。</p>
 <br>
 </div>
 <style type="text/css">
