--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,3 +1,4 @@
+<h1>予約ページ</h1>
 <%= form_with(model: @reservation, local: true ) do |form| %>
   <% if @reservation.errors.any? %>
     <div id="error_explanation">
