--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,7 +1,10 @@
+<div class="htag"
 <h1>予約一覧</h1>
+</div>
+<div class="ptag"
 <p>登録の順番通りになっています。</p>
 <p>メールを送信したら削除してください。</p>
-
+</div>
 <% if notice %>
     <p class="notice"><%= notice %></p>
 <% end %>
