--- a/app/assets/stylesheets/reservation.scss
+++ b/app/assets/stylesheets/reservation.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .end { width: 800px; margin: 0 auto; font-size: 1.0em; margin-top: auto;top: 0;}
 body {
-	position: absolute;
+	text-align: center;
 }
 
 .page-header{ width: 960px; margin: 0 auto; font-size: 2.5em; position: absolute; top: 0;}
@@ -46,5 +46,23 @@ body {
 .menu2 {margin-top: 15px; font-size: 30px}
 a.menu3 {margin-top: 15px; font-size: 80px}
 a.menu4 {margin-top: 15px; font-size: 80px}
-h1{font-size: 100px}
+h1{font-size: 10px}
 .notice{font-size: 80px; color: #ff00ff}
+header.page-header{ text-align: center;}
+.all {
+   background-color: #FF0;   /* 背景色指定 */
+   position: absolute;          /* 位置指定 */
+   padding: 20px;               /* 余白指定 */
+   top:  0;                     /* 位置指定 */
+   bottom:  0;                  /* 位置指定 */
+   left:  0;                    /* 位置指定 */
+   right:  0;                   /* 位置指定 */
+   margin:  auto;               /* 中央寄せ */
+   width:  auto;               /* 幅指定 */
+   height: 300px;                /* 高さ指定 */
+}
+
+.ptag{margin-top: 15px; font-size: 40px}
+.htag{margin-top: 15px; font-size: 70px}
+h1{margin-top: 15px; font-size: 70px}
+.logout{margin-top: 15px; font-size: 70px}
