--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -4,9 +4,9 @@
 
 <div class="end">
 <br>
-<p>予約完了しました</p>
-<th>5分前になったらメールを送信いたします。<th>
-<p>しばらくお待ちください。</p>
+<h1>予約完了しました</h1>
+<h1>5分前になったらメールを送信いたします。<h1>
+<h1>しばらくお待ちください。</h1>
 <br>
 </div>
 <style type="text/css">
