--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -2,6 +2,6 @@
 
 <h4>name: <%= @reservation.name %></h4>
 
-<h4>お問い合わせ内容の確認</h4>
+<h4>お問い合わせ内容の確認a</h4>
 
 <p>content: <%= @reservation.content %></p>
